<resources>
    <string name="app_name">Minimalist Savings Tracker</string>
    <string name="nav_header_title">Minimalist Savings Tracker</string>
    <string name="nav_header_subtitle">Simple Finance Tracking</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_credits">Credits</string>
    <string name="menu_home">Home</string>
    <string name="Income">Income</string>
    <string name="Income_Expenses">Income/Expenses</string>
    <string name="Amount">Amount:</string>
    <string name="Reference">Reference:</string>
    <string name="Yen">‎¥</string>
    <string name="Submit">Submit</string>
    <string name="Expense">Expense</string>
    <string name="AmountHint">1000</string>
    <string name="ReferenceHint">Bills</string>
    <string name="Edit">Edit</string>
    <string name="EditBalance">Edit Balance</string>
    <string name="InputNewBalance">Input new balance:</string>
    <string name="_100000">100,000</string>
    <string name="budgeting">Budgeting</string>
    <string name="stats">Stats</string>
    <string name="Reset">reset</string>
    <string name="Category">Category:</string>
    <string name="Date">Date:</string>
    <string name="ChooseDate">Select a date</string>
    <string name="Delete">Are you sure you want to delete this entry?</string>
    <string name="DeleteButton">DELETE</string>
    <string name="icon_attr">Icon Attributions</string>
    <string name="special_thanks">A Special Thanks to:</string>
    <string name="choose_category">Choose a Category:</string>
    <string name="target_value">Monthly Target:</string>
    <string name="set_target">Set Target</string>
    <string name="auth_title">Authentication Required</string>
    <string name="login">Login</string>
    <string name="old_pin">Enter Old Pin:</string>
    <string name="new_pin">Enter New Pin:</string>
    <string name="verif_newpin">Verify New Pin:</string>
    <string name="change_pin">Change Pin</string>
    <string name="create_pin">Create a Pin:</string>
    <string name="verif_pin">Verify Pin:</string>
    <string name="pin_setup_welcome">Welcome to Minimalist Savings Tracker.\n\nTo begin, please create a pin.</string>
    <string name="security_question">Choose a Security Question:</string>
    <string name="button_next">Next</string>
    <string name="twofactor_info">Select a security question and provide an answer.</string>
    <string name="answer">Answer:</string>
    <string name="verify_answer">Verify Answer:</string>
    <string name="twofactor_note">Note: This answer will be used for pin recovery</string>
    <string name="forgot_pin">forgot your pin?</string>
    <string name="forgot_info">Please input your security question answer.</string>
    <string name="change_security">Change</string>
    <string name="securityq">Security Question:</string>
    <string name="decimal_point">.</string><![CDATA[
    />

    ]]>
    <string-array name="income_categories">
        <item>Gift</item>
        <item>Refunds</item>
        <item>Repayments</item>
        <item>Salary</item>
        <item>Sold Items</item>
        <item>Others</item>
    </string-array>

    <string-array name="expense_categories">
        <item>Alcohol/Bars</item>
        <item>Bills</item>
        <item>Cafes</item>
        <item>Clothes Shopping</item>
        <item>Donations</item>
        <item>Eating Out</item>
        <item>Educational</item>
        <item>Entertainment</item>
        <item>Family</item>
        <item>Friends</item>
        <item>Grocery Shopping</item>
        <item>Health</item>
        <item>Household</item>
        <item>Misc. Shopping</item>
        <item>Partner/Lover</item>
        <item>Pets</item>
        <item>Rent</item>
        <item>Repayments</item>
        <item>Transportation</item>
        <item>Others</item>
    </string-array>

    <string-array name="security_questions">
        <item>What was your childhood nickname?</item>
        <item>In what city does your nearest sibling live?</item>
        <item>What is your oldest cousin\'s first name?</item>
        <item>Who was your favorite teacher?</item>
        <item>What is the first name of the person you first kissed?</item>
        <item>What is your favorite movie?</item>
    </string-array>

    <string-array name="currency_list">
        <item>British Pound (GBP)</item>
        <item>Euro (EUR)</item>
        <item>Japanese Yen (JPY)</item>
        <item>US Dollar (USD)</item>
    </string-array>

</resources>
