<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_budgeting"
            android:icon="@drawable/ic_menu_bud"
            android:title="@string/budgeting" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/stats" />
    </group>
    <group android:id="@+id/menu_bottom" >
        <item
            android:id="@+id/nav_stord"
            android:title="Standing Orders" />
    </group>
</menu>
