<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_transactions"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_income_expenses"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:text="@string/Amount"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_minus_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_income_expenses"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/txt_amount"
        android:text="-"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="visible"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txt_yen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_income_expenses"
        android:layout_marginStart="5dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/txt_minus_rv"
        android:text="@string/Yen"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_income_expenses"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="28dp"
        android:layout_toEndOf="@+id/txt_yen"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/AmountHint"
        android:inputType="number"
        android:maxLength="7"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txt_reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_amount"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/Reference"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_amount"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="51dp"
        android:layout_toEndOf="@+id/txt_reference"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ReferenceHint"
        android:inputType="textShortMessage"
        android:maxLength="12"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_reference"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Submit" />

    <ToggleButton
        android:id="@+id/btn_income_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="76dp"
        android:background="#3EB82504"
        android:checked="true"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textColor="#000000"
        android:textOff="@string/Income"
        android:textOn="@string/Expense" />

</RelativeLayout>