<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_twofactorinfo"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/twofactor_info"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_twofactornote"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/twofactor_note"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_twofactorinfo" />

    <Spinner
        android:id="@+id/spn_changequestions"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_twofactornote" />

    <TextView
        android:id="@+id/txt_twofactor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/answer"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_changequestions" />

    <EditText
        android:id="@+id/edit_twofactoranswer"
        android:layout_width="292dp"
        android:layout_height="58dp"
        android:autofillHints="(pin)"
        android:ems="10"
        android:hint="(answer)"
        android:maxLength="30"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_twofactor1" />

    <TextView
        android:id="@+id/txt_twofactor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/verify_answer"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_twofactoranswer" />

    <EditText
        android:id="@+id/edit_twofactorverif"
        android:layout_width="292dp"
        android:layout_height="58dp"
        android:autofillHints="(pin)"
        android:ems="10"
        android:hint="(verify answer)"
        android:maxLength="30"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_twofactor2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_twofactorsubmit"
        android:layout_width="142dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_twofactorverif" />
</androidx.constraintlayout.widget.ConstraintLayout>