<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_enteroldpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/old_pin"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_oldpin"
        android:layout_width="236dp"
        android:layout_height="60dp"
        android:autofillHints="(pin)"
        android:ems="10"
        android:hint="(old pin)"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enteroldpin" />

    <TextView
        android:id="@+id/txt_enternewpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/new_pin"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_oldpin" />

    <EditText
        android:id="@+id/edit_newpin"
        android:layout_width="236dp"
        android:layout_height="60dp"
        android:autofillHints="(pin)"
        android:ems="10"
        android:hint="(new pin)"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enternewpin" />

    <TextView
        android:id="@+id/txt_newpinverif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/verif_pin"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_newpin" />

    <EditText
        android:id="@+id/edit_newpinverif"
        android:layout_width="236dp"
        android:layout_height="60dp"
        android:autofillHints="(pin)"
        android:ems="10"
        android:hint="(new pin)"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_newpinverif" />

    <Button
        android:id="@+id/btn_change_pin"
        android:layout_width="131dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/change_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_newpinverif" />

</androidx.constraintlayout.widget.ConstraintLayout>