<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg_pinsetup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:backgroundTintMode="multiply" />

    <TextView
        android:id="@+id/txt_pinsetupwelcome"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/pin_setup_welcome"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_pinsetuppin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_pin"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pinsetupwelcome" />

    <EditText
        android:id="@+id/edit_pinsetuppin"
        android:layout_width="236dp"
        android:layout_height="60dp"
        android:autofillHints="(pin)"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="(pin)"
        android:inputType="numberPassword"
        android:maxLength="12"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="#BDBDBD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pinsetuppin" />

    <TextView
        android:id="@+id/txt_pinsetupverif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/verif_pin"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pinsetuppin" />

    <EditText
        android:id="@+id/edit_pinsetupverif"
        android:layout_width="236dp"
        android:layout_height="60dp"
        android:autofillHints="(pin)"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="(verify pin)"
        android:inputType="numberPassword"
        android:maxLength="12"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="#BDBDBD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pinsetupverif" />

    <Button
        android:id="@+id/btn_pinsetupnext"
        android:layout_width="142dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorAccent"
        android:text="@string/button_next"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pinsetupverif" />

</androidx.constraintlayout.widget.ConstraintLayout>