<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_answerverif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_pin"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_newanswer"
        android:layout_width="236dp"
        android:layout_height="60dp"
        android:autofillHints="(pin)"
        android:ems="10"
        android:hint="(new pin)"
        android:inputType="numberPassword"
        android:maxLength="12"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_answerverif" />

    <TextView
        android:id="@+id/txt_newanswerverif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/verif_newpin"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_newanswer" />

    <EditText
        android:id="@+id/edit_newanswerverif"
        android:layout_width="236dp"
        android:layout_height="60dp"
        android:autofillHints="(pin)"
        android:ems="10"
        android:hint="(new pin)"
        android:inputType="numberPassword"
        android:maxLength="12"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_newanswerverif" />

    <Button
        android:id="@+id/btn_forgotpinchange"
        android:layout_width="131dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/change_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_newanswerverif" />

</androidx.constraintlayout.widget.ConstraintLayout>